@@ -67,7 +67,8 @@ class Image_Graph_Axis_Marker_Area extends Image_Graph_Grid
     /**
      * [Constructor]
      */
-    function &Image_Graph_Axis_Marker_Area() {
+    function &Image_Graph_Axis_Marker_Area()
+    {
         parent::Image_Graph_Grid();
         $this->_lineStyle = false;
     }
